# TakaTheBot

./: Cargo.toml  README.md  build.rs
automatic_generation/: Cargo.toml
automatic_generation/src/: lib.rs  slash_commands.rs
src/: slash_commands.rs
src/slash_commands/: ping.rs
taka_the_bot/: Cargo.toml
taka_the_bot/src/: main.rs  slash_commands.rs
